--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,8 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.redis.host=localhost
 spring.redis.port=6379
 
+#?????
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+#??
+spring.jackson.time-zone=GMT+8
+
